# ditto-translation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.agents/: settings.json
.agents/hooks/: post_edit_tracker.py  skill_guard.py
.agents/skills/: skill-rules.json
.agents/skills/codex-review-loop/: SKILL.md
.agents/skills/codex-review-loop/references/prompts/: adversarial-review.md
.agents/skills/codex-review-loop/scripts/: codex-subagent.sh
.github/workflows/: ci.yml  docker-release.yml  vercel-release.yml
app/: __init__.py  config.py  ditto.py  main.py  models.py  service.py  store.py  translator.py
ditto_translation/: config.py  ditto.py  main.py  models.py  retry.py  security.py  service.py  store.py  translator.py
openspec/changes/add-ditto-webhook-auto-translation/: design.md  proposal.md  tasks.md
openspec/changes/add-ditto-webhook-auto-translation/specs/ditto-webhook-auto-translation/: spec.md
openspec/changes/archive/2026-06-22-add-ditto-webhook-auto-translation/: design.md  proposal.md
openspec/changes/archive/2026-06-22-add-ditto-webhook-auto-translation/specs/ditto-webhook-auto-translation/: spec.md
openspec/changes/support-text-item-created-translation/: design.md  proposal.md  tasks.md
openspec/changes/support-text-item-created-translation/specs/ditto-webhook-auto-translation/: spec.md
openspec/specs/ditto-webhook-auto-translation/: spec.md
tests/: test_service.py  test_translator.py
