[project]
name = "ditto-translation"
version = "0.1.0"
description = "Ditto webhook service that auto-translates changed locales through codex-lb."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "openai>=1.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".agents",
    ".claude",
    ".codex",
    ".git",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.src]
exclude = [
    ".agents/**",
    ".claude/**",
    ".codex/**",
    ".git/**",
    ".venv/**",
]
